color and movement

--- a/style.css
+++ b/style.css
@@ -16,3 +16,16 @@ body {
 .grey {
     background-color: grey;
 }
+
+.player{
+    background-color: red;
+}
+
+.clear{
+    padding-top: 20px;
+    clear: both;
+}
+
+select {
+    font-size: 20px;
+}
